--- a/index.html
+++ b/index.html
@@ -10,37 +10,6 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage-compat.js"></script>
 <link rel="stylesheet" href="style.css">
-<style>
-    /* 現有的樣式保持不變 */
-    
-    /* 添加導航欄相關樣式 */
-    #sideNav {
-        box-shadow: -10px 0 20px rgba(0, 0, 0, 0.1);
-    }
-
-    @media (max-width: 768px) {
-        #sideNav {
-            width: 80%;
-            max-width: 320px;
-            transform: translateX(100%);
-        }
-
-        #sideNav.show {
-            transform: translateX(0);
-        }
-    }
-
-    #navOverlay {
-        background-color: rgba(0, 0, 0, 0.5);
-        transition: opacity 0.3s ease;
-        backdrop-filter: none; /* 移除霧化效果 */
-    }
-
-    /* 移除 backdrop-filter */
-    .modal-backdrop {
-        background-color: rgba(0, 0, 0, 0.5);
-    }
-</style>
 </head>
 <body class="h-full">
 <div class="min-h-full flex flex-col">
@@ -86,6 +55,15 @@
                         </button>
                     </div>
                 </form>
+
+                <div class="mt-8 text-center">
+                    <a href="vote.html" class="inline-flex items-center px-6 py-3 rounded-xl bg-gradient-to-r from-indigo-500 to-purple-500 text-white hover:from-indigo-600 hover:to-purple-600 transition-all duration-300 shadow-lg hover:shadow-xl group">
+                        <span class="mr-2">前往投票系統</span>
+                        <svg class="w-5 h-5 transform group-hover:translate-x-1 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
+                        </svg>
+                    </a>
+                </div>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
@@ -118,55 +96,9 @@
     </div>
 </div>
 
-    <!-- 右側導航欄 -->
-    <nav class="transform transition-transform duration-300 fixed top-0 right-0 h-full bg-white shadow-xl z-50 w-64 md:translate-x-0 translate-x-full" id="sideNav">
-        <!-- 收縮按鈕只在桌面版顯示 -->
-        <button id="toggleNav" class="hidden md:block absolute left-0 top-6 -translate-x-1/2 bg-white p-2 rounded-full shadow-lg z-10 hover:bg-gray-50 transition-all duration-300">
-            <svg class="w-6 h-6 transform transition-transform duration-300" id="toggleIcon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
-            </svg>
-        </button>
-
-        <div class="h-full bg-white">
-            <div class="p-6">
-                <div class="flex items-center justify-between mb-6">
-                    <h2 class="text-2xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-purple-500">功能選單</h2>
-                    <!-- 添加手機版關閉按鈕 -->
-                    <button id="closeNav" class="md:hidden p-2 rounded-full hover:bg-gray-100">
-                        <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
-                        </svg>
-                    </button>
-                </div>
-                <ul class="space-y-4">
-                    <!-- 修改現有的導航項目，添加 title 屬性 -->
-                    <li>
-                        <a href="index.html" class="nav-link active" title="發文系統">
-                            <svg class="w-6 h-6 min-w-[1.5rem]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9.5a2.5 2.5 0 00-2.5-2.5H15"/>
-                            </svg>
-                            <span class="nav-text whitespace-nowrap">發文系統</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="vote.html" class="nav-link" title="投票系統">
-                            <svg class="w-6 h-6 min-w-[1.5rem]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"/>
-                            </svg>
-                            <span class="nav-text whitespace-nowrap">投票系統</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- 修改遮罩層 -->
-    <div id="navOverlay" class="fixed inset-0 bg-black opacity-50 z-40 hidden md:hidden"></div>
-
-    <!-- 修改移動端選單按鈕樣式 -->
-    <button id="mobileMenuBtn" class="md:hidden fixed right-4 top-4 z-50 bg-white p-2 rounded-full shadow-lg hover:bg-gray-50 transition-all duration-300">
-        <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+    <!-- 移動端選單按鈕 -->
+    <button id="mobileMenuBtn" class="md:hidden fixed right-4 top-4 z-50 bg-white p-2 rounded-full shadow-lg">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"/>
         </svg>
     </button>
