--- a/vote-admin.html
+++ b/vote-admin.html
@@ -57,6 +57,14 @@
                 <div id="voteManagementList" class="space-y-6">
                     <!-- 投票管理卡片將動態添加在這裡 -->
                 </div>
+
+                <!-- 在投票管理列表前添加 -->
+                <div class="mb-8">
+                    <h2 class="text-2xl font-bold mb-4">待審核的投票申請</h2>
+                    <div id="voteRequestsList" class="space-y-4">
+                        <!-- 申請卡片將由 JavaScript 動態生成 -->
+                    </div>
+                </div>
             </div>
         </main>
     </div>
