--- a/vote.html
+++ b/vote.html
@@ -128,9 +128,12 @@
                     返回發文系統
                 </a>
 
-                <h1 class="text-5xl font-bold text-center mb-10 bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
-                    投票系統
-                </h1>
+                <button onclick="openVoteRequestModal()" class="mb-8 w-full px-6 py-3 bg-gradient-to-r from-indigo-500 to-purple-500 text-white rounded-xl hover:from-indigo-600 hover:to-purple-600 transition-all duration-300 shadow-lg hover:shadow-xl flex items-center justify-center space-x-2">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"/>
+                    </svg>
+                    <span>申請新投票</span>
+                </button>
 
                 <!-- 活動投票列表 -->
                 <div id="voteList" class="space-y-6">
@@ -141,6 +144,53 @@
 
         <!-- 添加遮罩層 -->
         <div class="nav-overlay" id="navOverlay"></div>
+    </div>
+
+    <!-- 申請投票的 Modal -->
+    <div id="voteRequestModal" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50">
+        <div class="min-h-screen px-4 text-center">
+            <div class="inline-block align-bottom bg-white rounded-2xl text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                    <div class="sm:flex sm:items-start">
+                        <div class="w-full">
+                            <h3 class="text-2xl leading-6 font-bold text-gray-900 mb-4">
+                                申請新投票
+                            </h3>
+                            <form id="voteRequestForm" class="space-y-4">
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700">投票主題</label>
+                                    <input type="text" id="requestTitle" required
+                                        class="mt-1 block w-full rounded-xl border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
+                                </div>
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700">投票說明</label>
+                                    <textarea id="requestDescription" required rows="3"
+                                        class="mt-1 block w-full rounded-xl border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500"></textarea>
+                                </div>
+                                <div id="requestOptionsContainer" class="space-y-2">
+                                    <label class="block text-sm font-medium text-gray-700">投票選項</label>
+                                    <!-- 選項將由 JavaScript 動態添加 -->
+                                </div>
+                                <button type="button" onclick="addRequestOption()" 
+                                    class="mt-2 px-4 py-2 text-sm font-medium text-indigo-600 hover:text-indigo-500">
+                                    + 添加選項
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                    <button type="button" onclick="submitVoteRequest()"
+                        class="w-full inline-flex justify-center rounded-xl border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:ml-3 sm:w-auto sm:text-sm">
+                        提交申請
+                    </button>
+                    <button type="button" onclick="closeVoteRequestModal()"
+                        class="mt-3 w-full inline-flex justify-center rounded-xl border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                        取消
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="vote.js"></script>
 </body>
