--- a/vote.html
+++ b/vote.html
@@ -148,8 +148,8 @@
 
     <!-- 申請投票的 Modal -->
     <div id="voteRequestModal" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50">
-        <div class="min-h-screen px-4 text-center">
-            <div class="inline-block align-bottom bg-white rounded-2xl text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+        <div class="min-h-screen px-4 text-center flex items-center justify-center">
+            <div class="inline-block bg-white rounded-2xl text-left overflow-hidden shadow-xl transform transition-all w-full sm:max-w-lg mx-4">
                 <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                     <div class="sm:flex sm:items-start">
                         <div class="w-full">
